--- a/docker/database/Dockerfile
+++ b/docker/database/Dockerfile
@@ -4,9 +4,8 @@ ENV POSTGRES_USER postgres
 ENV POSTGRES_PASSWORD postgres
 ENV POSTGRES_DB postgres
 
-COPY ./data_generator/data/harddrive.csv /
-COPY ./sql/harddrive.sql /docker-entrypoint-initdb.d
-#COPY ./sql/copy_csv.sql /docker-entrypoint-initdb.d
+
+COPY ./sql/ /docker-entrypoint-initdb.d
 COPY ./scripts/database/create-role.sh /docker-entrypoint-initdb.d
 
 
