Removed: Trigger on push to SC-22-Pipeline branch

--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -2,7 +2,7 @@ name: Makefile CI
 
 on:
   push:
-    branches: [ "development", "SC-22-Pipeline" ]
+    branches: [ "development" ]
   pull_request:
     branches: [ "development" ]
 
