Changed: Malicious change to docker compose
This is to test the workflow to see if an error is given when something goes wrong with building the images.

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - DATABASE_USERNAME = "postgres"
       - DATABASE_PASSWORD = "postgres"
     links:
-      - postgresdb:db
+      - postgredwadwadwadawdwaddb:db
     ports:
       - "8000:8000"
     depends_on:
