Changed: Reverted malicious changes

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - DATABASE_USERNAME = "postgres"
       - DATABASE_PASSWORD = "postgres"
     links:
-      - postgredwadwadwadawdwaddb:db
+      - postgresdb:db
     ports:
       - "8000:8000"
     depends_on:
@@ -25,7 +25,7 @@ services:
 
   postgresdb:
     build: 
-      context: ./dockers
+      context: ../
       dockerfile: ./docker/database/Dockerfile
     ports:
       - "5432:5432"
