Added: Grafana container Prometheus container Prometheus exporter at localhost:8001/metrics Pylint config

--- a/docker/predictive_maintenance/Dockerfile
+++ b/docker/predictive_maintenance/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 COPY ./predictive_maintenance .
 
 RUN pip install -e .
+RUN pip install requests
+RUN pip install prometheus-client
 RUN pip install uvicorn
 
 CMD ["uvicorn", "predictive_maintenance.app.main:app", "--host", "0.0.0.0", "--port", "8001"]
-
-
