--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -19,3 +19,15 @@ jobs:
 
     - name: Run build_services
       run: make build_services
+  
+  cypress-test:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Run build_services
+        run: make compose_up
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v5.3.0
