--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -34,11 +34,11 @@ services:
       context: ../
       dockerfile: ./docker/data_generator/Dockerfile
     environment:
-      - DATABASE_HOST =db
-      - DATABASE_PORT =5432
-      - DATABASE_NAME =postgres
-      - DATABASE_USERNAME =postgres
-      - DATABASE_PASSWORD =postgres
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+      - DATABASE_NAME=postgres
+      - DATABASE_USERNAME=postgres
+      - DATABASE_PASSWORD=postgres
     links:
       - postgresdb:db
     ports:
