--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Run build_services
-        run: make compose_up
+        run: make temp_test
 
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
