--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -7,27 +7,16 @@ on:
     branches: [ "development" ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Cached LFS checkout
-      uses: nschloe/action-cached-lfs-checkout@v1.1.2
-
-    - name: Run build_services
-      run: make build_services
-  
   cypress-test:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
         uses: actions/checkout@v3
-        
-      - name: Run build_services
-        run: make temp_test
+      
+      - name: Cached LFS checkout
+        uses: nschloe/action-cached-lfs-checkout@v1.1.2
 
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
+        with:
+          run: make compose_up
