--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -7,6 +7,19 @@ on:
     branches: [ "development" ]
 
 jobs:
+  build:
+
+      runs-on: ubuntu-latest
+
+      steps:
+      - uses: actions/checkout@v3
+
+      - name: Cached LFS checkout
+        uses: nschloe/action-cached-lfs-checkout@v1.1.2
+
+      - name: Run build_services
+        run: make build_services
+
   cypress-test:
     runs-on: ubuntu-latest
     steps: 
@@ -15,8 +28,9 @@ jobs:
       
       - name: Cached LFS checkout
         uses: nschloe/action-cached-lfs-checkout@v1.1.2
-
+        
+      - name: Run docker-compose up
+        run: docker compose -f docker/docker-compose.yaml up --detach
+        
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
-        with:
-          run: make compose_up
