--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,31 +3,26 @@ version: '3.9'
 volumes:
   prometheus-data:
     driver: local
-  grafana-storage:
-    driver: local
 
 services:
-  prometheus:
+  postgresdb:
     build:
       context: ../
-      dockerfile: ./docker/prometheus/Dockerfile
-    image: prom/prometheus:latest
-    container_name: prometheus
+      dockerfile: ./docker/database/Dockerfile
     ports:
-      - "9090:9090"
-    volumes:
-      - prometheus-data:/prometheus
+      - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -h localhost -p 5432" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  grafana:
+  anomaly_detector:
     build:
       context: ../
-      dockerfile: ./docker/grafana/Dockerfile
-    image: grafana/grafana-enterprise
-    container_name: grafana
+      dockerfile: ./docker/predictive_maintenance/Dockerfile
     ports:
-      - "3000:3000"
-    volumes:
-      - grafana-storage:/var/lib/grafana
+      - "8001:8001"
 
   data_generator:
     build:
@@ -56,21 +51,24 @@ services:
       retries: 10
     restart: always
 
-  postgresdb:
+  prometheus:
     build:
       context: ../
-      dockerfile: ./docker/database/Dockerfile
+      dockerfile: ./docker/prometheus/Dockerfile
+    image: prom/prometheus:latest
+    container_name: prometheus
     ports:
-      - "5432:5432"
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -h localhost -p 5432" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - "9090:9090"
+    volumes:
+      - prometheus-data:/prometheus
 
-  anomaly_detector:
+  grafana:
     build:
       context: ../
-      dockerfile: ./docker/predictive_maintenance/Dockerfile
+      dockerfile: ./docker/grafana/Dockerfile
+    image: grafana/grafana-enterprise
+    container_name: grafana
     ports:
-      - "8001:8001"
+      - "3000:3000"
+    volumes:
+      - ./grafana:/var/lib/grafana
