--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -71,4 +71,5 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./grafana:/var/lib/grafana
+      - ./grafana/grafana:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
