--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -33,7 +33,8 @@ jobs:
         run: docker compose -f docker/docker-compose.yaml up --detach
         
       - name: Wait 1 minute
-        run: bash sleep 1m
+        run: sleep 1m
+        shell: bash
         
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
