--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -34,3 +34,18 @@ jobs:
         
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Cached LFS checkout
+        uses: nschloe/action-cached-lfs-checkout@v1.1.2
+
+      - name: Run docker-compose up
+        run: docker compose -f docker/docker-compose.yaml up --detach
+
+      - name: Python Unit tests run
+        uses: 
