--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -47,5 +47,11 @@ jobs:
       - name: Run docker-compose up
         run: docker compose -f docker/docker-compose.yaml up --detach
 
-      - name: Python Unit tests run
-        uses: 
+      - name: Setup Python
+        uses: actions/setup-python@v4.5.0
+        
+      - name: Run pip install
+        run: python -m pip install pika --upgrade
+        
+      - name: Run Python Unit Tests
+        run: python3 tests/unit_tests/test_rabbitmq.py
