--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -29,14 +29,8 @@ jobs:
       - name: Cached LFS checkout
         uses: nschloe/action-cached-lfs-checkout@v1.1.2
         
-      - name: Run docker-compose up
-        run: docker compose -f docker/docker-compose.yaml up --detach
-        
-      - name: Wait 2 minutes
-        run: sleep 2m
-        shell: bash
-        
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
         with:
+          start: docker compose -f docker/docker-compose.yaml up --detach
           wait-on: https://localhost:3000
