Changed: renamed anomaly to predictive maintenance

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       timeout: 5s
       retries: 5
 
-  anomaly_detector:
+  predictive_maintenance:
     build:
       context: ../
       dockerfile: ./docker/predictive_maintenance/Dockerfile
