--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
       runs-on: ubuntu-latest
 
       steps:
@@ -28,9 +27,9 @@ jobs:
       
       - name: Cached LFS checkout
         uses: nschloe/action-cached-lfs-checkout@v1.1.2
-        
+      
+      - name: Grafana and Prometheus
+        run: docker compose -f docker/docker-compose.yaml up grafana prometheus predictive_maintenance
+
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
-        with:
-          start: docker compose -f docker/docker-compose.yaml up --detach
-          wait-on: https://localhost:3000
