--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -29,7 +29,7 @@ jobs:
         uses: nschloe/action-cached-lfs-checkout@v1.1.2
       
       - name: Grafana and Prometheus
-        run: docker compose -f docker/docker-compose.yaml up grafana prometheus predictive_maintenance
+        run: docker compose -f docker/docker-compose.yaml up grafana prometheus predictive_maintenance --detach
 
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
