--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -31,5 +31,9 @@ jobs:
       - name: Grafana and Prometheus
         run: docker compose -f docker/docker-compose.yaml up grafana prometheus predictive_maintenance --detach
 
+      - name: Wait 1 minute
+        run: sleep 1m
+        shell: bash
+
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
