--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -31,8 +31,11 @@ jobs:
       - name: Start Grafana and Prometheus containers
         run: docker compose -f docker/docker-compose.yaml up grafana prometheus --detach
 
-      - name: Wait 10 minutes
-        run: sleep 10m
+      - name: Get logs
+        run: docker compose -f docker/docker-compose.yaml logs grafana
+
+      - name: Wait 30 seconds
+        run: sleep 30s
         shell: bash
 
       - name: Cypress run
