--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -67,6 +67,7 @@ services:
       context: ../
       dockerfile: ./docker/grafana/Dockerfile
     image: grafana/grafana-enterprise
+    user: ":"
     container_name: grafana
     ports:
       - "3000:3000"
