--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -19,7 +19,7 @@ scrape_configs:
         # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'harddrivedata'
     static_configs:
-      - targets: ['host.docker.internal:8001']
+      - targets: ['predictive_maintenance:8001']
 
 
   # Example job for node_exporter
