--- a/docker/data_generator/Dockerfile
+++ b/docker/data_generator/Dockerfile
@@ -11,6 +11,5 @@ WORKDIR /app
 COPY ./data_generator .
 
 RUN pip install -e .
-RUN pip install uvicorn
 
-CMD ["uvicorn", "data_generator.app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python3", "data_generator/app/main.py"]
