--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,10 +11,22 @@ volumes:
 services:
   rabbitmq:
     image: rabbitmq:3.11-management
-    container_name: rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
+  db:
+    build:
+      context: ../
+      dockerfile: ./docker/database/Dockerfile
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -h localhost -p 5432" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - predictive-maintenance-net
 
   predictive_maintenance:
     build:
