--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,6 +11,7 @@ volumes:
 services:
   rabbitmq:
     image: rabbitmq:3.11-management
+    user: ":"
     ports:
       - "5672:5672"
       - "15672:15672"
