--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -61,6 +61,7 @@ jobs:
         
       - name: Run pip install
         run: python -m pip install pika --upgrade
+        run: python pip install docker
         
       - name: Run Python Unit Tests
         run: python3 tests/unit_tests/test_rabbitmq.py
