--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,11 +11,12 @@ volumes:
 services:
   rabbitmq:
     image: rabbitmq:3.11-management
+    container_name: rabbitmq
     user: ":"
     ports:
       - "5672:5672"
       - "15672:15672"
-      
+
   db:
     build:
       context: ../
