--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -60,8 +60,7 @@ jobs:
         uses: actions/setup-python@v4.5.0
         
       - name: Run pip install
-        run: python -m pip install pika --upgrade
-        run: python pip install docker
+        run: python -m pip install pika --upgrade && python pip install docker
         
       - name: Run Python Unit Tests
         run: python3 tests/unit_tests/test_rabbitmq.py
