--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -63,7 +63,7 @@ jobs:
         run: python -m pip install pika --upgrade
 
       - name: pip install docker
-        run: python pip install docker
+        run: pip install docker
         
       - name: Run Python Unit Tests
         run: python3 tests/unit_tests/test_rabbitmq.py
