--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/camelCaseCrew/itu_predictive_maintenance/issues"
   },
   "homepage": "https://github.com/camelCaseCrew/itu_predictive_maintenance#readme",
-  "devDependencies": {
-    "cypress": "^12.7.0"
+  "dependencies": {
+    "cypress": "^12.8.1"
   }
 }
