--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Cached LFS checkout
         uses: nschloe/action-cached-lfs-checkout@v1.1.2
       
-      - name: Start Grafana and Prometheus containers
-        run: docker compose -f docker/docker-compose.yaml up grafana prometheus --detach
+      - name: Start Grafana, Prometheus and FrontEnd containers
+        run: docker compose -f docker/docker-compose.yaml up grafana prometheus frontend --detach
 
       - name: Get logs
         run: docker compose -f docker/docker-compose.yaml logs
