--- a/docker/predictive_maintenance/Dockerfile
+++ b/docker/predictive_maintenance/Dockerfile
@@ -5,8 +5,5 @@ WORKDIR /app
 COPY ./predictive_maintenance .
 
 RUN pip install -e .
-RUN pip install requests
-RUN pip install prometheus-client
-RUN pip install uvicorn
 
-CMD ["uvicorn", "predictive_maintenance.app.main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["python", "predictive_maintenance/app/main.py"]
