Changed: Context of COPY command to copy previous folder

--- a/docker/unit_tests/Dockerfile
+++ b/docker/unit_tests/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10
 
 WORKDIR /code/tests
 
-COPY ./tests/unit_tests/ .
+COPY ./tests/unit_tests .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
