Changed: Context of COPY command to copy previous folder

--- a/docker/unit_tests/Dockerfile
+++ b/docker/unit_tests/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.10
 
 WORKDIR /code/tests
 
-COPY ./tests/unit_tests .
+COPY ./tests .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r ./unit_tests/requirements.txt
 
 ENTRYPOINT [ "python3", "./test_rabbitmq.py" ]
