Changed: Experimenting a bit more

--- a/docker/unit_tests/Dockerfile
+++ b/docker/unit_tests/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /code/tests
 
 COPY . .
 
+RUN ls
+
 RUN pip install --no-cache-dir -r ./unit_tests/requirements.txt
 
 ENTRYPOINT [ "python3", "./test_rabbitmq.py" ]
