Changed: The file structure. Still experimenting

--- a/docker/unit_tests/Dockerfile
+++ b/docker/unit_tests/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.10
 
-WORKDIR /code/tests
+WORKDIR /app
 
-COPY ./unit_tests/ .
+COPY ./unit_tests .
 
 RUN ls
 
-RUN pip install --no-cache-dir -r ./unit_tests/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 ENTRYPOINT [ "python3", "./test_rabbitmq.py" ]
