--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -60,4 +60,4 @@ jobs:
         run: docker compose -f docker/docker-compose.yaml logs
         
       - name: Run Python Unit Tests
-        run: docker run unit_tests
+        run: docker run --network rabbitnet unit_tests
