Changed: Grafanas docker compose file area to try to allow for iframes to be shared, Added: Iframe to test.txt in frontend

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -81,6 +81,12 @@ services:
     volumes:
       - ../grafana:/var/lib/grafana
       - ../grafana/provisioning:/etc/grafana/provisioning
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
+      - GF_SERVER_ALLOW_EMBEDDING=true
+      - GF_SECURITY_X_FRAME_OPTIONS=SAMEORIGIN
+      - X_FRAME_OPTIONS=SAMEORIGIN
     networks:
       - predictive-maintenance-net
 
