--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -60,4 +60,4 @@ jobs:
         run: sleep 10s
         
       - name: Run Python Unit Tests
-        run: docker run --network rabbitnet unit_tests
+        run: docker run --network predictive-maintenance-net unit_tests
