--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -81,12 +81,13 @@ services:
     volumes:
       - ../grafana:/var/lib/grafana
       - ../grafana/provisioning:/etc/grafana/provisioning
+      - ../grafana/etc/custom.ini:/etc/grafana/grafana.ini
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
       - GF_SERVER_ALLOW_EMBEDDING=true
-      - GF_SECURITY_X_FRAME_OPTIONS=SAMEORIGIN
-      - X_FRAME_OPTIONS=SAMEORIGIN
+      - GF_SECURITY_X_CONTENT_TYPE=""
+      - GF_SECURITY_X_FRAME_OPTIONS="ALLOW-FROM localhost:3001"
     networks:
       - predictive-maintenance-net
 
@@ -96,5 +97,7 @@ services:
       dockerfile: ./docker/frontend/Dockerfile
     ports:
       - "3001:3003"
+    environment:
+      - X_FRAME_OPTIONS=SAMEORIGIN
     networks:
       - predictive-maintenance-net
