--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
         
-  test:
+  test-rabbitmq:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -54,7 +54,7 @@ jobs:
         run: docker compose -f docker/docker-compose.yaml up rabbitmq --detach
 
       - name: Build unit_tests image
-        run: docker build -t unit_tests ./unit_tests/
+        run: docker build -t unit_tests ./unit_tests/rabbitmq/
       
       - name: Wait 10 seconds
         run: sleep 10s
