Changed: test_rabbitmq.py to test.py

--- a/unit_tests/rabbitmq/Dockerfile
+++ b/unit_tests/rabbitmq/Dockerfile
@@ -8,4 +8,4 @@ RUN ls
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-ENTRYPOINT [ "python3", "./test_rabbitmq.py" ]
+ENTRYPOINT [ "python3", "./test.py" ]
