Added: test-data-stream job

--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -61,3 +61,24 @@ jobs:
         
       - name: Run Python Unit Tests
         run: docker run --network docker_predictive-maintenance-net unit_tests
+
+  test-data-stream:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Cached LFS checkout
+        uses: nschloe/action-cached-lfs-checkout@v1.1.2
+
+      - name: Run docker-compose up rabbitmq data_generator
+        run: docker compose -f docker/docker-compose.yaml up rabbitmq data_generator --detach
+
+      - name: Build unit_tests image
+        run: docker build -t unit_tests ./unit_tests/data-stream/
+      
+      - name: Wait 15 seconds
+        run: sleep 15s
+        
+      - name: Run Python Unit Tests
+        run: docker run --network docker_predictive-maintenance-net unit_tests
