--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -82,3 +82,24 @@ jobs:
         
       - name: Run Python Unit Tests
         run: docker run --network docker_predictive-maintenance-net unit_tests
+  
+  test-ml-worker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Cached LFS checkout
+        uses: nschloe/action-cached-lfs-checkout@v1.1.2
+
+      - name: Run docker-compose up rabbitmq data_generator
+        run: docker compose -f docker/docker-compose.yml up rabbitmq predictive_maintenance --detach
+
+      - name: Build unit_tests image
+        run: docker build -t unit_tests ./unit_tests/ml-worker/
+      
+      - name: Wait 20 seconds
+        run: sleep 20s
+        
+      - name: Run Python Unit Tests
+        run: docker run --network docker_predictive-maintenance-net unit_tests
