Added: restart-always for ml-worker

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       dockerfile: ./docker/predictive_maintenance/Dockerfile
     ports:
       - "8001:8001"
+    restart: always
     networks:
       - predictive-maintenance-net
 
