Added: Volume so that you don't have to rebuild image each time you make a change to the frontend

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -126,4 +126,6 @@ services:
       - predictive-maintenance-net
     depends_on:
       - grafana
+    volumes:
+      - ../frontend:/frontend
       
