--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -30,11 +30,7 @@ jobs:
       
       - name: Start containers
         run: docker compose -f docker/docker-compose.yml up --detach
-
-      - name: Wait 30 seconds
-        run: sleep 30s
-        shell: bash
-
+        
       - name: Get logs
         run: docker compose -f docker/docker-compose.yml logs
 
@@ -44,6 +40,8 @@ jobs:
 
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
+        with:
+          wait-on: 'http://localhost:3001'
         
   test-rabbitmq:
     runs-on: ubuntu-latest
