--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -29,7 +29,7 @@ jobs:
         uses: nschloe/action-cached-lfs-checkout@v1.1.2
       
       - name: Start containers
-        run: docker compose -f docker/docker-compose.yml up --detach
+        run: docker compose -f docker/docker-compose.yml up
         
       - name: Get logs
         run: docker compose -f docker/docker-compose.yml logs
