Added: Depends on grafana

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -96,6 +96,8 @@ services:
       - X_FRAME_OPTIONS=SAMEORIGIN
     networks:
       - predictive-maintenance-net
+    depends_on:
+      - grafana
     volumes:
       - ../frontend:/frontend
 
