--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -92,6 +92,11 @@ services:
       dockerfile: ./docker/frontend/Dockerfile
     ports:
       - "3001:3003"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -h localhost -p 3001" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     environment:
       - X_FRAME_OPTIONS=SAMEORIGIN
     networks:
@@ -100,6 +105,7 @@ services:
       - grafana
     volumes:
       - ../frontend:/frontend
+    restart: always
 
   prometheus:
     image: prom/prometheus:latest
