--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -27,9 +27,14 @@ jobs:
       
       - name: Cached LFS checkout
         uses: nschloe/action-cached-lfs-checkout@v1.1.2
+        
+      - name: Install dependencies
+        run: npm ci
       
       - name: Start containers
         run: docker compose -f docker/docker-compose.yml up --detach
+        
+        
         
       - name: Get logs
         run: docker compose -f docker/docker-compose.yml logs
