--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "primereact": "^9.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.2",
