--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -137,13 +137,13 @@ jobs:
         uses: nschloe/action-cached-lfs-checkout@v1.1.2
 
       - name: Run docker-compose up db
-        run: docker compose -f docker/docker-compose.yml up db --detach
+        run: docker compose -f docker/docker-compose.yml up db rabbitmq data_generator --detach
 
       - name: Build unit_tests image
         run: docker build -t unit_tests ./unit_tests/feedback-storage/
       
-      - name: Wait 20 seconds
-        run: sleep 20s
+      - name: Wait 60 seconds
+        run: sleep 60s
         
       - name: Run Python Unit Tests
         run: docker run --network docker_predictive-maintenance-net unit_tests
