--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/camelCaseCrew/itu_predictive_maintenance#readme",
   "dependencies": {
-    "cypress": "^12.8.1"
+    "cypress": "^12.8.1",
+    "react-infinite-scroll-component": "^6.1.0"
   }
 }
