--- a/docker/alert_manager/Dockerfile
+++ b/docker/alert_manager/Dockerfile
@@ -1,3 +1,14 @@
-FROM prom/alertmanager:v0.25.0
+FROM python:3.7.4-alpine3.10
 
-COPY ../../alert_manager/alertmanager.yml /etc/alertmanager/alertmanager.yml
+WORKDIR /alert_manager
+
+COPY ../alert_manager/ .
+
+RUN chmod +x alertmanager
+
+RUN pip install flask
+RUN pip install pyyaml
+
+EXPOSE 5000
+
+CMD ["sh", "run.sh"]
