--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@types/node": "18.15.3",
+    "@types/pg": "^8.6.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.6",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "pg": "^8.10.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.3.0",
     "react": "18.2.0",
