--- a/alert_manager/alertmanager.yml
+++ b/alert_manager/alertmanager.yml
@@ -1,8 +1,8 @@
 route:
   group_by: ['alertname']
-  group_wait: 30s
-  group_interval: 45s
-  repeat_interval: 1m
+  group_wait: 1s
+  group_interval: 5s
+  repeat_interval: 1h
   receiver: 'mail'
 inhibit_rules:
   - source_match:
