Changed: Rule which groups by serial_number and device_type that are critical

--- a/prometheus/alert.yml
+++ b/prometheus/alert.yml
@@ -1,9 +1,8 @@
 groups:
-  - name: DemoAlerts
+  - name: NewCriticalDevice
     rules:
-      - alert: InstanceDown 
-        expr: count(device_health{group="critical"})
-        for: 1m
+      - alert: CriticalDevice 
+        expr: sum by (serial_number, device_type) (device_health{group="critical"})
         labels:
           severity: low
         annotations:
