--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^1.0.6",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
@@ -16,6 +17,7 @@
     "axios": "^1.3.6",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "heroicons": "^2.0.17",
     "next": "13.2.4",
     "primeicons": "^6.0.1",
     "primereact": "^9.3.0",
