--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/camelCaseCrew/itu_predictive_maintenance#readme",
   "dependencies": {
     "cypress": "^12.8.1",
-    "react-infinite-scroll-component": "^6.1.0",
-    "cypress-iframe": "^1.0.1"
+    "cypress-iframe": "^1.0.1",
+    "react-infinite-scroll-component": "^6.1.0"
+  },
+  "devDependencies": {
+    "pg": "^8.10.0"
   }
 }
