--- a/prometheus/alert.yml
+++ b/prometheus/alert.yml
@@ -4,6 +4,6 @@ groups:
       - alert: CriticalDevice 
         expr: sum by (serial_number, device_type) (device_health{group="critical"})
         labels:
-          severity: low
+          serial_number: $labels.serial_number
         annotations:
-          summary: 'Testing...'
+          summary: "Testing: {{ $labels.serial_number }}"
