--- a/.github/workflows/Continuous-integration.yml
+++ b/.github/workflows/Continuous-integration.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5.3.0
         with:
+          record: false
           wait-on: 'http://localhost:3001'
         
   test-rabbitmq:
