--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/camelCaseCrew/itu_predictive_maintenance#readme",
   "dependencies": {
     "cypress": "^12.8.1",
+    "cypress-iframe": "^1.0.1",
     "react-infinite-scroll-component": "^6.1.0",
-    "cypress-iframe": "^1.0.1"
+    "uuid": "^9.0.0"
   }
 }
