--- a/alert_manager/alertmanager.yml
+++ b/alert_manager/alertmanager.yml
@@ -17,8 +17,8 @@ receivers:
     email_configs:
       - require_tls: false
         headers: 
-          subject: '{{ template "custom_mail_subject" . }}'
-        html: '{{ template "custom_mail_html" . }}'
+          subject: '{{ template "device_critical_subject" . }}'
+        html: '{{ template "device_critical_html" . }}'
         from: 'alice@example.com'
         smarthost: 'mail:25'
         hello: 'mail'
