Added: Placeholder email address in 'to'

--- a/alert_manager/alertmanager.yml
+++ b/alert_manager/alertmanager.yml
@@ -24,4 +24,4 @@ receivers:
         hello: 'mail'
         auth_username: 'alice@example.com'
         auth_password: 'secretpassword'
-        to: ''
+        to: 'alice@example.com'
