--- a/alert_manager/alertmanager.yml
+++ b/alert_manager/alertmanager.yml
@@ -22,6 +22,6 @@ receivers:
         from: 'alice@example.com'
         smarthost: 'mail:25'
         hello: 'mail'
-        auth_username: 'alice@example.com'
+        auth_username: 'predictit@example.com'
         auth_password: 'secretpassword'
-        to: 'alice@example.com'
+        to: 'predictit@example.com'
