Added: Anonymous user added to Grafana org as viewer

--- a/grafana/etc/custom.ini
+++ b/grafana/etc/custom.ini
@@ -3,3 +3,10 @@ allow_embedding = true
 x_content_type_options = ""
 x_frame_options = "ALLOW-FROM http://localhost:3000"
 enable_gzip = true
+
+[auth.anonymous]
+# enable anonymous access 
+enabled = true
+
+# specify organization name that should be used for unauthenticated users
+org_name = Systematic
