Changed: Removed organisation name

--- a/grafana/etc/custom.ini
+++ b/grafana/etc/custom.ini
@@ -8,5 +8,6 @@ enable_gzip = true
 # enable anonymous access 
 enabled = true
 
-# specify organization name that should be used for unauthenticated users
-org_name = Systematic
+cookie_samesite = none
+allow_embedding = true
+hide_version = true
