Added: CORS headers to requests

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -134,6 +134,7 @@ services:
       - grafana
   
   alert_manager:
+    container_name: alert_manager
     build:
       context: ../
       dockerfile: ./docker/alert_manager/Dockerfile
